# clinch

./: .tmuxp.yaml  CLInch_SPEC.md  DEV_GUIDE.md  DEV_SPEC.md  README.md  USER_GUIDE.md  devenv.nix  pyproject.toml
docs/: advanced_responses.md  wrapper_validation.md
examples/: advanced_responses.py  validated_wrappers.py
src/clinch/: __init__.py  exceptions.py  fields.py
src/clinch/base/: __init__.py  command.py  error.py  response.py  wrapper.py
src/clinch/examples/: __init__.py  echo.py  jj.py  ls.py
src/clinch/parsing/: __init__.py  engine.py  result.py
src/clinch/utils/: __init__.py  regex_helpers.py
tests/: test_advanced_responses.py  test_async.py  test_base_error.py  test_base_response.py  test_command.py  test_coverage.py  test_exceptions.py  test_fields.py  test_jj_example.py  test_parsing_engine.py  test_parsing_result.py  test_public_api.py  test_regex_helpers.py  test_smoke.py  test_wrapper.py  test_wrapper_validation.py
tests/integration/: test_examples.py  test_examples_usage.py  test_real_tools.py
