# pyproject.toml
[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "clinch"
version = "0.2.0"
description = "Pydantic-based library for wrapping CLI tools with type-safe Python interfaces."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "sh>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clinch"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "DEV_SPEC.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/clinch",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "A"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "lf"
